--- a/the-vipers-cove/angular.json
+++ b/the-vipers-cove/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/the-vipers-cove",
+            "outputPath": "public/the-vipers-cove",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -57,7 +57,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "the-vipers-cove:build"
+            "browserTarget": "the-vipers-cove:build",
+            "port": 4200
           },
           "configurations": {
             "production": {
