--- a/the-vipers-cove/package.json
+++ b/the-vipers-cove/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@auth0/angular-jwt": "^2.1.0",
     "angular2-flash-messages": "^3.0.1",
     "core-js": "^2.6.1",
     "rxjs": "~6.3.3",
